--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,12 +1,12 @@
 .footer {
     width: 100%;
-    max-width: 1280px;
     background-color: #fff;
     margin: 0 auto;
 }
 
 .footer__container {
-    margin: 0;
+    max-width: 1280px;
+    margin: 0 auto;
     padding: 0 70px;
     max-height: 172px;
     display: grid;
