--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,13 +2,14 @@
     margin: 0 auto;
     padding: 0;
     width: 100%;
-    max-width: 1280px;
     background-color: #F3C1F8;
     max-height: 74px;
 }
 
 .header__container {
-    margin: 0;
+    border: 1px crimson solid;
+    max-width: 1280px;
+    margin: 0 auto;
     padding: 0;
     display: flex;
     justify-content: space-between;
