--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,7 +1,6 @@
 .about-me {
     margin: 0 auto;
     width: 100%;
-    max-height: 1079px;
     background-color: #fff;
     padding-bottom: 125px;
 }
@@ -70,7 +69,8 @@
 }
 
 .about-me__links {
-    margin: 99px 0 0 70px;
+    margin: 0 0 0 70px;
+    align-self: flex-end;
     grid-area: links;
     padding: 0;
     list-style: none;
@@ -91,7 +91,7 @@
     font-weight: 500;
     font-style: normal;
     font-size: 14px;
-    line-height: 27px;
+    line-height: 17px;
     color: #000;
     text-decoration: none;
 }
@@ -113,4 +113,44 @@
     width: 130%;
     object-fit: cover;
     object-position: -40px;
+}
+
+@media screen and (max-width: 1024px) {
+    .about-me__container {
+        grid-template-columns: 364px 1fr;
+        max-width: 768px;
+        margin: 90px auto 0;
+        padding: 0 0 90px 0;
+    }
+
+    .about-me__title {
+        margin: 0 50px 90px;
+    }
+
+    .about-me__name {
+        margin: 0 0 0 50px;
+        font-size: 40px;
+        line-height: 40px;
+    }
+    .about-me__about {
+        margin: 16px 0 0 50px;
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    .about-me__info {
+        margin: 20px 0 0 50px;
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    .about-me__links {
+        margin: 0 0 0 50px;
+    }
+
+    .about-me__photo-wrapper {
+        width: 255px;
+        height: 307px;
+    }
+
 }
