--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,7 +1,6 @@
 .promo {
     margin: 0 auto;
     width: 100%;
-    max-height: 574px;
     background-color: #F3C1F8;
     padding-bottom: 75px;
 }
@@ -13,7 +12,8 @@
     max-width: 1280px;
     background-image: url("../../images/promo_logo.svg");
     background-repeat: no-repeat;
-    background-position: 900px 75px;
+    background-position: top 75px right 70px;
+    background-size: 310px 304px;
     display: flex;
     flex-direction: column;
 }
@@ -58,4 +58,59 @@
     border-radius: 3px;
     box-sizing: border-box;
     cursor: pointer;
+}
+
+@media screen and (max-width: 1024px) {
+    .promo {
+        padding-bottom: 66px;
+    }
+    .promo__container {
+        background-position: center 140px;
+        max-height: 784px;
+    }
+
+    .promo__title {
+        margin: 492px auto 0;
+        font-size: 40px;
+        line-height: 50px;
+        text-align: center;
+    }
+
+    .promo__subtitle {
+        margin: 22px auto 0;
+        text-align: center;
+    }
+
+    .promo__link {
+        margin: 92px auto 10px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .promo {
+        padding-bottom: 0;
+    }
+    .promo__container {
+        background-size: 210px 206px;
+        background-position: center 70px;
+        max-height: 784px;
+    }
+
+    .promo__title {
+        margin: 320px auto 0;
+        font-size: 30px;
+        line-height: 38px;
+        text-align: center;
+        max-width: 300px;
+    }
+
+    .promo__subtitle {
+        margin: 24px auto 0;
+        text-align: center;
+        max-width: 260px;
+    }
+
+    .promo__link {
+        margin: 80px auto 30px;
+    }
 }
