--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -50,7 +50,7 @@
     margin: 0 0 0 70px;
     grid-area: about;
     font-family: Inter, Arial, sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     font-style: normal;
     font-size: 22px;
     line-height: 27px;
@@ -118,7 +118,6 @@
 @media screen and (max-width: 1024px) {
     .about-me__container {
         grid-template-columns: 364px 1fr;
-        max-width: 768px;
         margin: 90px auto 0;
         padding: 0 0 90px 0;
     }
@@ -152,5 +151,73 @@
         width: 255px;
         height: 307px;
     }
+}
+@media screen and (max-width: 696px) {
+    .about-me__container {
+        display: flex;
+        flex-direction: column;
+        margin: 70px auto 0;
+    }
 
+    .about-me__title {
+        margin: 0 14px 60px;
+        padding-bottom: 28px;
+    }
+
+    .about-me__photo-wrapper {
+        margin: 0 auto;
+    }
+
+    .about-me__name {
+        margin: 40px 0 0 14px;
+        font-size: 40px;
+        line-height: 40px;
+    }
+
+    .about-me__about {
+        margin: 16px 0 0 14px;
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    .about-me__info {
+        margin: 20px 14px 0 14px;
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    .about-me__links {
+        margin: 40px 0 0 14px;
+        align-self: flex-start;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .about-me__container {
+        padding-bottom: 69px;
+    }
+
+    .about-me__title {
+        font-size: 18px;
+        line-height: 22px;
+    }
+
+    .about-me__name {
+        font-size: 30px;
+        line-height: 36px;
+    }
+    .about-me__about {
+        font-size: 11px;
+        line-height: 16px;
+    }
+
+    .about-me__info {
+        font-size: 11px;
+        line-height: 16px;
+    }
+
+    .about-me__photo-wrapper {
+        width: 255px;
+        height: 307px;
+    }
 }
