--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,18 +9,19 @@
     max-width: 1280px;
     margin: 0 auto;
     padding: 0 70px;
-    max-height: 172px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 0 0;
-    grid-template-areas: "info info" "copyright links";
+    grid-template-areas:
+            "info info"
+            "copyright links";
     box-sizing: border-box;
 }
 
 .footer__info {
     margin: 0;
-    padding: 70px 0 20px;
+    padding: 79px 0 20px;
     grid-area: info;
     display: block;
     font-family: Inter, Arial, sans-serif;
@@ -68,4 +69,50 @@
 
 .footer__link:last-child {
     margin-right: 0;
+}
+
+
+@media screen and (max-width: 768px) {
+    .footer__container {
+        padding: 0 30px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .footer__container {
+        padding: 0 10px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer__info {
+        padding: 79px 0 21px;
+    }
+
+    .footer__links {
+        margin: 30px auto 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer__link {
+        margin: 20px auto 0;
+        font-size: 12px;
+        line-height: 15px;
+    }
+
+    .footer__link:first-child {
+        margin-top: 0;
+    }
+
+    .footer__link:last-child {
+        margin-right: auto;
+    }
+
+    .footer__copyright {
+        margin: 30px auto 10px;
+        font-size: 12px;
+        line-height: 15px;
+    }
 }
