--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -13,7 +13,7 @@
     padding: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: min-content 1fr 1fr;
+    grid-template-rows: min-content min-content min-content;
     grid-template-areas:
             "title title"
             "article article"
@@ -36,7 +36,11 @@
 }
 
 .about-project__article {
-    margin: 0 70px 0 70px;
+    margin: 0 0 0 70px;
+}
+
+.about-project__article:nth-of-type(2n) {
+    margin: 0 70px 0 0;
 }
 
 .about-project__article-title {
@@ -47,6 +51,7 @@
     font-style: normal;
     font-size: 20px;
     line-height: 24px;
+    letter-spacing: -0.04em;
     color: #000;
 }
 
@@ -104,4 +109,92 @@
     line-height: 17px;
     color: #a0a0a0;
     text-align: center;
+}
+
+@media screen and (max-width: 1024px) {
+    .about-project {
+        padding-bottom: 90px;
+    }
+    .about-project__container {
+        margin: 90px auto 0;
+        column-gap: 30px;
+    }
+
+    .about-project__title {
+        margin: 0 50px 70px 50px;
+    }
+
+    .about-project__article {
+        margin: 0 0 0 50px;
+    }
+
+    .about-project__article:nth-of-type(2n) {
+        margin: 0 50px 0 0;
+    }
+
+    .about-project__article-text {
+        margin: 22px 0 0 0;
+        font-size: 12px;
+    }
+    .about-project__timeline {
+        margin: 0 50px;
+        padding-top: 93px;
+    }
+}
+
+
+@media screen and (max-width: 480px) {
+    .about-project {
+        padding-bottom: 70px;
+    }
+    .about-project__container {
+        margin: 70px auto 0;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about-project__title {
+        margin: 0 18px 60px 18px;
+        font-size: 18px;
+        line-height: 22px;
+    }
+
+    .about-project__article {
+        margin: 0 18px;
+        font-size: 18px;
+        line-height: 22px;
+    }
+
+    .about-project__article:nth-of-type(2n) {
+        margin: 56px 18px 0;
+    }
+
+    .about-project__article-text {
+        margin: 26px 0 0 0;
+        font-size: 11px;
+        line-height: 16px;
+    }
+    .about-project__timeline {
+        margin: 0 18px;
+        grid-template-columns: 30% 70%;
+        padding-top: 60px;
+    }
+
+    .about-project__timeline-backend {
+        font-size: 11px;
+        line-height: 13px;
+        padding: 11px 14px;
+    }
+
+    .about-project__timeline-frontend {
+        font-size: 11px;
+        line-height: 13px;
+        padding: 11px 14px;
+    }
+
+    .about-project__timeline-subtitle {
+        padding-top: 10px;
+        font-size: 11px;
+        line-height: 13px;
+    }
 }
