--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,11 +3,9 @@
     padding: 0;
     width: 100%;
     background-color: #F3C1F8;
-    max-height: 74px;
 }
 
 .header__container {
-    border: 1px crimson solid;
     max-width: 1280px;
     margin: 0 auto;
     padding: 0;
@@ -16,7 +14,7 @@
 }
 
 .header__logo {
-    margin: 18px 0 18px 70px;
+    margin: 0;
     width: 38px;
     height: 38px;
 }
@@ -38,29 +36,44 @@
     color: #000;
     text-decoration: none;
     margin: 0;
+    text-align: center;
+    display: block;
+    padding: 8px 0;
+}
+
+.header__link-logo {
+    margin: 18px 0 18px 70px;
+    text-decoration: none;
+}
+
+.header__link-logo:hover {
+    opacity: .6;
 }
 
 .header__link_reg {
     margin-right: 30px;
 }
 
+.header__li:hover {
+    opacity: .6;
+}
+
 .header__link_login {
     color: #fff;
+    background-color: #000;
+    width: 76px;
+    height: 32px;
+    border-radius: 3px;
+    box-sizing: border-box;
 }
 
 .header__li {
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-.header__li_login {
-    background-color: #000;
-    width: 76px;
-    height: 32px;
-    border-radius: 3px;
+.header__li_login:hover {
+    background-color: #a0a0a0;
 }
 
 @media screen and (max-width: 768px) {
