--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -6,7 +6,6 @@
 }
 
 .promo__container {
-    border: 1px crimson solid;
     margin: 0 auto;
     padding: 0;
     max-width: 1280px;
@@ -57,7 +56,15 @@
     color: #000;
     border-radius: 3px;
     box-sizing: border-box;
-    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    padding: 10px 0;
+}
+
+.promo__link:hover {
+    background-color: #a0a0a0;
+    opacity: .6;
+    color: #fff;
 }
 
 @media screen and (max-width: 1024px) {
