--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -2,20 +2,18 @@
     margin: 0 auto;
     padding: 0;
     width: 100%;
-    min-height: 625px;
     background-color: #f5f5f5;
 }
 
 .tech__container {
     margin: 0 auto;
-    border: 1px crimson solid;
     max-width: 1280px;
     display: flex;
     flex-direction: column;
 }
 
 .tech__title {
-    margin: 110px 70px 90px 70px;
+    margin: 110px 70px 90px;
     font-family: Inter, Arial, sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -74,6 +72,61 @@
     text-align: center;
 }
 
+.tech__item:hover {
+    background-color: #F3C1F8;
+}
+
 .tech__item:last-child {
     margin-right: 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .tech__title {
+        margin: 90px 50px 80px;
+    }
+
+    .tech__text {
+        margin: 22px auto 0;
+        font-size: 12px;
+        line-height: 18px;
+        max-width: 460px;
+    }
+
+    .tech__list {
+        margin: 83px auto 90px;
+    }
+}
+
+@media screen and (max-width: 696px) {
+    .tech {
+        background-color: #fff;
+    }
+    .tech__title {
+        margin: 70px 18px 60px;
+        font-size: 18px;
+        line-height: 22px;
+    }
+
+    .tech__subtitle {
+        font-size: 30px;
+        line-height: 36px;
+    }
+
+    .tech__text {
+        margin: 24px auto 0;
+        font-size: 11px;
+        line-height: 16px;
+        max-width: 292px;
+    }
+
+    .tech__list {
+        margin: 50px auto 70px;
+        display: grid;
+        grid-template-columns: min-content min-content;
+        gap: 10px;
+    }
+
+    .tech__item {
+        margin: 0;
+    }
 }
