--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -46,8 +46,17 @@
     text-decoration: none;
 }
 
-.header__link-logo:hover {
-    opacity: .6;
+.header__logo:hover {
+    animation: scaleLogo .5s linear forwards;
+}
+
+@keyframes scaleLogo {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1.1);
+    }
 }
 
 .header__link_reg {
