--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,10 @@
     background-color: #F3C1F8;
 }
 
+.header_auth {
+    background-color: #fff;
+}
+
 .header__container {
     max-width: 1280px;
     margin: 0 auto;
@@ -17,28 +21,6 @@
     margin: 0;
     width: 38px;
     height: 38px;
-}
-
-.header__nav {
-    margin: 21px 70px 21px 0;
-    display: flex;
-    justify-content: flex-end;
-    padding: 0;
-    list-style: none;
-}
-
-.header__link {
-    font-family: Inter, Arial, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 16px;
-    color: #000;
-    text-decoration: none;
-    margin: 0;
-    text-align: center;
-    display: block;
-    padding: 8px 0;
 }
 
 .header__link-logo {
@@ -59,58 +41,15 @@
     }
 }
 
-.header__link_reg {
-    margin-right: 30px;
-}
-
-.header__li:hover {
-    opacity: .6;
-}
-
-.header__link_login {
-    color: #fff;
-    background-color: #000;
-    width: 76px;
-    height: 32px;
-    border-radius: 3px;
-    box-sizing: border-box;
-}
-
-.header__li {
-    margin: 0;
-    padding: 0;
-}
-
-.header__li_login:hover {
-    background-color: #a0a0a0;
-}
 
 @media screen and (max-width: 768px) {
     .header__logo {
         margin-left: 30px;
-    }
-
-    .header__nav {
-        margin-right: 30px;
     }
 }
 
 @media screen and (max-width: 480px) {
     .header__logo {
         margin-left: 14px;
-    }
-
-    .header__nav {
-        margin-right: 14px;
-    }
-
-    .header__li_login {
-        width: 54px;
-        height: 26px;
-    }
-
-    .header__link {
-        font-size: 10px;
-        line-height: 16px;
     }
 }
