--- a/src/components/AuthHeader/AuthHeader.css
+++ b/src/components/AuthHeader/AuthHeader.css
@@ -1,12 +1,14 @@
 .auth-header {
     margin: 0;
-    padding: 0;
+    padding: 0 0 0 62px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto min-content;
 }
 
 .auth-header__nav {
-    margin: 21px 70px 21px 0;
+    margin: 21px auto;
     display: flex;
-    justify-content: flex-end;
     padding: 0;
     list-style: none;
 }
@@ -15,8 +17,8 @@
     font-family: Inter, Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 13px;
+    line-height: 18px;
     color: #000;
     text-decoration: none;
     margin: 0;
@@ -25,21 +27,9 @@
     padding: 8px 0;
 }
 
-.auth-header__link_reg {
-    margin-right: 30px;
-}
 
 .auth-header__li:hover {
     opacity: .6;
-}
-
-.auth-header__link_login {
-    color: #fff;
-    background-color: #000;
-    width: 76px;
-    height: 32px;
-    border-radius: 3px;
-    box-sizing: border-box;
 }
 
 .auth-header__li {
@@ -47,8 +37,49 @@
     padding: 0;
 }
 
-.auth-header__li_login:hover {
-    background-color: #a0a0a0;
+.auth-header__li:last-child {
+    margin-left: 16px;
+}
+
+.auth-header__account {
+    justify-self: flex-end;
+    margin: 21px 70px 21px 0;
+    padding: 0;
+    background-color: #fff;
+    border-radius: 40px;
+    box-shadow: 0 3px 14px rgba(0, 0, 0, 0.08);
+    display: flex;
+    width: 100px;
+    height: 32px;
+    text-decoration: none;
+}
+
+.auth-header__account:hover {
+    box-shadow: 0 3px 14px rgba(243, 193, 248, 1);
+
+}
+
+.auth-header__account-text {
+    font-family: Inter, Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 12px;
+    color: #000;
+    text-decoration: none;
+    margin: 9px 0 9px 11px;
+}
+
+.auth-header__account-image {
+    background-image: url("../../images/header_acc.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-color: #f9f9f9;
+    background-size: 10px 10px;
+    border-radius: 100px;
+    width: 26px;
+    height: 26px;
+    margin: 3px 3px 3px 7px;
 }
 
 @media screen and (max-width: 768px) {
