--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,16 +1,22 @@
 .search-form {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
+    max-height: 222px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .search-form__container {
-    background-color: #fff;
-    width: 100%;
-    height: 222px;
+    height: 212px;
+    margin: 0 70px 10px;
+    padding: 0;
+    border-bottom: 1px solid #e8e8e8;
+    box-sizing: border-box;
 }
 
 .search-form__form {
-    margin: 70px 70px 80px;
+    margin: 70px 0 80px;
     height: 72px;
     border-radius: 9px;
     background-color: #fdfdfd;
