--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,6 +4,6 @@
     display: flex;
     flex-direction: column;
     min-width: 320px;
-    height: min-content;
     align-items: center;
+    height: 100%;
 }
