Сверстана регистрация и авторизация

--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -82,3 +82,28 @@
     color: #fff;
     cursor: pointer;
 }
+
+.register__text {
+    margin: 16px auto 0;
+    font-family: Inter, Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: #a0a0a0;
+}
+
+.register__link {
+    margin: 0 0 0 6px;
+    text-decoration: none;
+    font-family: Inter, Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000;
+}
+
+.register__link:hover {
+    opacity: .6;
+}
