--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -11,7 +11,6 @@
 
 .page-not-found__title {
     margin: 426px 0 0;
-    text-align: center;
     font-family: Inter, Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -22,7 +21,6 @@
 
 .page-not-found__text {
     margin: 5px 0 184px;
-    text-align: center;
     font-family: Inter, Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -32,7 +30,7 @@
 }
 
 .page-not-found__link {
-
+    margin: 0;
     font-family: Inter, Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -40,4 +38,8 @@
     line-height: 19px;
     color: #000;
     text-decoration: none;
+}
+
+.page-not-found__link:hover {
+    opacity: .6;
 }
