--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -42,3 +42,27 @@
 .movies-card-list__item:last-of-type {
     margin-bottom: 60px;
 }
+
+@media screen and (max-width: 768px) {
+    .movies-card-list__container {
+        margin: 60px 30px 80px;
+    }
+    .movies-card-list__item:last-of-type {
+        margin-bottom: 80px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .movies-card-list__container {
+        margin: 40px 10px 80px;
+    }
+    .movies-card-list__button {
+        width: 240px;
+    }
+    .movies-card-list__item:last-of-type {
+        margin-bottom: 70px;
+    }
+    .movies-card-list__item {
+        margin-bottom: 20px;
+    }
+}
