--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -63,43 +63,22 @@
     box-sizing: border-box;
 }
 
-.search-form__short-box {
-    border-left: 1px solid #cbcbcb;
-    margin: 16px 77px 16px 0;
+.search-form__find {
+    margin: 0;
+    padding: 0;
     display: flex;
-    font-family: Inter, Arial, sans-serif;
-    font-size: 13px;
-    line-height: 18px;
-    font-weight: normal;
-    font-style: normal;
-    padding: 11px 0;
-    position: relative;
 }
 
-.search-form__checkbox {
-    position: absolute;
-    left: 30px;
-    width: 36px;
-    height: 22px;
-    appearance: none;
-    cursor: pointer;
-}
+@media screen and (max-width: 767px) {
+    .search-form__form {
+        flex-direction: column;
+        align-items: center;
+    }
+    .search-form__container {
+        height: 272px;
+    }
 
-.search-form__checkbox-visible {
-    margin: auto 15px auto 30px;
-    box-sizing: border-box;
-    cursor: pointer;
-    width: 34px;
-    height: 14px;
-    border-radius: 20px;
-    background-color: #c4c4c4;
-    background-image: url("../../images/checkbox_round.svg");
-    background-repeat: no-repeat;
-    background-size: 10px 10px;
-    background-position: 2px center;
-}
-
-.search-form__checkbox:checked+.search-form__checkbox-visible {
-    background-color: #2BE080;
-    background-position: 22px center;
+    .search-form {
+        max-height: 272px;
+    }
 }
