--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -137,10 +137,10 @@
         height: 100vh;
         background: #fdfdfd;
         z-index: 99;
-        display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
+        display: none;
     }
     .navigation__link_index {
         display: block;
@@ -158,11 +158,14 @@
     .navigation__account {
         margin: 0 0 90px 0;
     }
-    .navigation__shadow {
-        display: block;
-    }
     .navigation__burger_close {
         position: fixed;
+    }
+    .navigation__shadow_active {
+        display: block;
+    }
+    .navigation__display_active {
+        display: flex;
     }
 }
 
