--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -17,7 +17,7 @@
 }
 
 .movies-card-list__button {
-    margin: 0 auto;
+    margin: 20px auto 0;
     align-content: center;
     height: 36px;
     width: 320px;
@@ -32,15 +32,6 @@
     text-align: center;
     color: #000;
     cursor: pointer;
-}
-
-.movies-card-list__item {
-    margin: 0 0 40px;
-    padding: 0;
-    list-style: none;
-}
-.movies-card-list__item:last-of-type {
-    margin-bottom: 60px;
 }
 
 @media screen and (max-width: 768px) {
