--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -37,7 +37,7 @@
 }
 
 .register__label {
-    margin: 24px 0 0;
+    margin: 6px 0 0;
     padding: 0;
     display: flex;
     flex-direction: column;
@@ -52,6 +52,18 @@
 
 .register__label:first-of-type {
     margin: 0;
+}
+
+.register__error-text {
+    margin: 6px 0 0;
+    padding: 0;
+    font-family: Inter, Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 10px;
+    line-height: 12px;
+    color: #ff4062;
+    max-width: 396px;
 }
 
 .register__input {
