--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -34,6 +34,10 @@
     cursor: pointer;
 }
 
+.movies-card-list__button_hidden {
+    display: none;
+}
+
 @media screen and (max-width: 768px) {
     .movies-card-list__container {
         margin: 60px 30px 80px;
